# aoc2024

./: 15.py  19.py  Cargo.toml  coredump.txt  day17_p2.py  out_python.txt  out_rust.txt
src/: lib.rs
tmp/: 07.py
