[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dashmap = "6.1.0"
dhat = { version = "0.3.3", optional = true }
fancy-regex = "0.14.0"
glam = "0.29.2"
hashbrown = "0.15.2"
itertools = "0.13.0"
lazy_static = "1.5.0"
ndarray = "0.16.1"
num = "0.4.3"
once_cell = "1.20.2"
pico-args = "0.5.0"
rayon = "1.10.0"
regex = "1.11.1"
tinyjson = "2.5.1"
transpose = "0.2.3"

# Solution dependencies
